Custom service level authorization